--- a/view/template.html
+++ b/view/template.html
@@ -131,7 +131,7 @@
         this.update();
       }
 
-	   $.get('/2. Setting up a New Project.md',function(r){
+	   $.get('/1. Getting Started.md',function(r){
 		   setTimeout(function(){
 		 	  	new Editor2(r, document.getElementById("preview"));
 		   },100);
